[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "apisentinel"
version = "0.1.0"
description = "AI-powered API security scanner for developers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "APISentinel Contributors" }]
keywords = ["api", "security", "scanner", "fastapi", "openapi", "owasp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "markdown>=3.6",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "respx>=0.21.1",
  "ruff>=0.4.4",
  "mypy>=1.10.0",
]
redis = ["redis>=5.0.4", "rq>=1.16.2"]
openai = ["openai>=1.30.0"]

[project.urls]
Homepage = "https://github.com/example/apisentinel"
Repository = "https://github.com/example/apisentinel"
Issues = "https://github.com/example/apisentinel/issues"

[project.scripts]
apiscan = "apisentinel.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["apisentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
ignore_missing_imports = true
